[package]
name = "yamamva"
version = "1.0.0"
edition = "2024"
description = "YAML scenario dispatcher — engine-agnostic, pull-based, with C bindings"
license = "MIT"
repository = "https://github.com/kikyujin/YAMAMVA"
keywords = ["game", "scenario", "visual-novel", "yaml", "ffi"]
categories = ["game-engines", "parser-implementations"]
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
